# kalshi_v3

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DESIGN_NOTES.md  Dockerfile  OPERATIONS.md  README.md  docker-compose.yml  tasks.md
.ai-loop/: NEEDS_INPUT.md  README.md  codex_result.json  codex_result.schema.json  config.example.json  config.json  discord_operator.py  idle_backlog.json  metrics_snapshot.json  operator_input.json.example  review_spec.md  reviewer_result.schema.json  run_loop.py
.ai-loop/idle_specs/: blocked-opportunity-audit.md  profit-funnel-audit.md
.ai-loop/logs/: iteration-01-codex-prompt.txt
.github/workflows/: ci.yml
config/: default.toml
crates/api/: Cargo.toml
crates/api/assets/: app.css  app.js  index.html
crates/api/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  domain.rs  events.rs  execution.rs  kalshi.rs  lib.rs
crates/decision/: Cargo.toml
crates/decision/src/: main.rs
crates/execution/: Cargo.toml
crates/execution/src/: main.rs
crates/feature/: Cargo.toml
crates/feature/src/: main.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: main.rs
crates/market-data/: Cargo.toml
crates/market-data/src/: lib.rs  orderbook_state.rs
crates/market-models/: Cargo.toml
crates/market-models/src/: lib.rs
crates/notifier/: Cargo.toml
crates/notifier/src/: main.rs
crates/replay/: Cargo.toml
crates/replay/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_initial.sql  0002_bankroll_snapshot.sql  0003_trade_lifecycle_decision_id.sql  0004_market_feature_indexes.sql  0005_execution_intent_status.sql  0006_worker_status.sql  0007_trade_execution_fields.sql  0008_live_exchange_sync.sql  0009_operator_controls_and_intent_state.sql  0010_ingest_event_log.sql  0011_market_feature_version.sql  0012_probability_calibration.sql  0013_lane_state_reason_history.sql  0014_historical_replay_example.sql  0015_model_benchmark_run.sql  0016_trained_model_artifact.sql  0017_discord_notification_state.sql  0018_market_family_and_weather_budgets.sql  0019_execution_quality_metrics.sql  0020_execution_truth_columns.sql  0021_restore_market_feature_snapshot_market_index.sql  0022_crypto_expiry_regime.sql  0023_drop_legacy_trained_model_artifact_constraint.sql
crates/storage/src/: lib.rs  pg.rs
crates/training/: Cargo.toml
crates/training/src/: main.rs
docs/: execution-metric-contract.md  weather-camera-research.md
ops/: prometheus.yml  start_v3_compose.ps1  start_v3_stack.ps1  stop_v3_compose.ps1  stop_v3_stack.ps1
