[workspace]
members = [
    "crates/api",
    "crates/common",
    "crates/decision",
    "crates/execution",
    "crates/feature",
    "crates/ingest",
    "crates/market-models",
    "crates/notifier",
    "crates/replay",
    "crates/storage",
    "crates/training",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Proprietary"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-nats = "0.44.2"
axum = { version = "0.8.6", features = ["macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
config = { version = "0.15.18", default-features = false, features = ["toml"] }
futures = "0.3.31"
dotenvy = "0.15.7"
rand = "0.8.5"
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rsa = { version = "0.9.8", features = ["pem"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
signature = "2.2.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
toml = "0.8.23"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
