[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
common = { path = "../common" }
dotenvy.workspace = true
reqwest.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
storage = { path = "../storage" }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
