[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
dotenvy.workspace = true
rand.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
signature.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
sqlx.workspace = true

[lib]
name = "common"
path = "src/lib.rs"
