[package]
name = "decision"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
common = { path = "../common" }
dotenvy.workspace = true
market-models = { path = "../market-models" }
market-data = { path = "../market-data" }
redis.workspace = true
serde_json.workspace = true
storage = { path = "../storage" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
