[package]
name = "execution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
common = { path = "../common" }
chrono.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
storage = { path = "../storage" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
