[package]
name = "ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
base64 = "0.22.1"
chrono.workspace = true
common = { path = "../common" }
dotenvy.workspace = true
rand = "0.8.5"
redis.workspace = true
reqwest.workspace = true
rsa = { version = "0.9.8", features = ["pem"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
signature = "2.2.0"
storage = { path = "../storage" }
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
