[package]
name = "notifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
common = { path = "../common" }
dotenvy.workspace = true
reqwest.workspace = true
serde_json.workspace = true
storage = { path = "../storage" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
