[package]
name = "training"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
common = { path = "../common" }
dotenvy.workspace = true
market-models = { path = "../market-models" }
replay = { path = "../replay" }
serde_json.workspace = true
storage = { path = "../storage" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite = { version = "0.32.1", features = ["bundled"] }
